DeployFiles/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-init-scripts
              mountPath: /docker-entrypoint-initdb.d/
              readOnly: true
      volumes:
        - name: mysql-init-scripts
          configMap:
            name: mysql-init-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    service: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  type: NodePort
---
