DeployFiles/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
            - name: static-storage
              mountPath: /staticfiles
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: static-storage
          persistentVolumeClaim:
            claimName: staticfiles-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
  type: NodePort
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     #nginx.ingress.kubernetes.io/rewrite-target: /
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     nginx.ingress.kubernetes.io/whitelist-source-ranges: 192.168.0.0/16
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#    - autogs.example.com
#    - api.autogs.example.com
#   secretName: web-tls
#   rules:
#   - host: autogs.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nginx
#             port:
#               number: 80
# Eliminar para no hacer accesible la api desde fuera
  # - host: api.autogs.example.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: asn1scc
  #           port:
  #             number: 5000
